--- a/index.html
+++ b/index.html
@@ -7,27 +7,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="icon/x-icon" href="1328226.png">
+    <link rel="icon" type="icon/x-icon" href="/pngwing.com.png">
 </head>
-<body class="back">
+<body class="back container-xl ">
     <script src="script.js"></script>
 <div class="container-fluid">
-     <div class="trans row rounded" style="margin-bottom: 80px;">
-        <div class="col-8">
+     <div class="bar row rounded" style="margin-bottom: 80px">
+        <div class="col-7">
             <img style="height: 50px;" src="/pngwing.com.png">
         </div>
-        <div class="col-4 mb-">
-            <nav class="fw-bold navbar navbar-expand-lg sticky">
+        <div class="col-5 mb-">
+            <nav class="fw-bold navbar navbar-expand-lg">
                 <ul class="navbar-nav">
                     <li class="nav-link">
                         <a class="text-white text-decoration-none" href="">Home</a>
                     </li>
                     <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="">Projects</a>
+                        <a class="text-white text-decoration-none" href="#proj">Projects</a>
                     </li>
                     <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="">Experiences</a>
+                        <a class="text-white text-decoration-none" href="#exp">Experiences</a>
                     </li>
                     <li class="nav-link">
                         <a class="text-white text-decoration-none" href="">Skills</a>
@@ -42,9 +43,9 @@
     </div>
     <div class="mb-5 container-fluid row col-2 col-12 text-white">
         <div class="col-6">
-            <h1 class="text-center">Danielle Lorraine D. Getil</h1>
-            <h4 style="font-style: italic" class="text-center fyellow">Professional Web Developer XD</h4>
-            <div class="col-3" style="margin-left: 150px;">
+            <h1>Danielle Lorraine D. Getil</h1>
+            <h4 style="font-style: italic" class="fyellow">Professional Web Developer XD</h4>
+            <div class="col-3">
                 <button id="utube" class="scalehover" style="border-radius: 15px; background-color: transparent;">
                     <img src="/Youtube_logo.png" alt="Youtube" style="height: 25px;">
                 </button>
@@ -52,7 +53,7 @@
                     <img src="/png-transparent-tiktok-tiktok-logo-tiktok-icon-thumbnail.png" alt="Youtube" style="height: 25px;">
                 </button>
             </div>
-            <h5 class="ms-5">
+            <h5>
                 
                 Web Developer from Philippines
                 with rich experience in web development
@@ -62,15 +63,15 @@
         </div>
         <div class="col-2"></div>
         <div class="col-4">
-            <img src="/431019694_3819668394920656_1421125926404645861_n.png" class="animated-image">
+            <img src="/431019694_3819668394920656_1421125926404645861_n.png" class="animated-image rounded-circle">
         </div>
     </div>
     <div>
         <div>
-            <h1 class="text-center col-4 fyellow">Introduction</h1>
+            <h1 class="mb-3 col-4 fyellow">Introduction</h1>
         </div>
         <div>
-            <h5 class="ms-5 text-white">
+            <h5 class="text-white">
                 <p>
                         I am a Full Stack Web Developer proficient specially in PHP, HTML, CSS, Bootstrap, MySQL, Laravel 
                 and limited experience on TailWind, Vuejs, Reactjs, Nodejs. From crafting stunning web designs to building
@@ -79,60 +80,109 @@
             </h5>
         </div>
     </div>
-</div>
+
 <div>
-    <div class="col-11 rounded">
-        <table class="bg-info ms-5 table rounded">
+    <div class=" col-12 rounded">
+        <table class="container-md table rounded">
             <thead>
                 <tr>
                     <th class="fyellow col-6">
-                        <h1>Projects</h1>
+                        <h1 id="proj">Projects</h1>
                     </th>
                     <th class="text-white fs-4">Technology Used</th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="text-white">
-                    <th class="fs-5">Grade Calculator <div>
-                    </div> <button class="buttonC fw-bold scalehover">Click Me</button>                        
-                    </th>
-                    <th>
+                    <td class="fs-5">Grade Calculator <div>              
+                        <button id="me" class="btn btn-warning fs-6 fw-bold scalehover">Click Me</button>
+                    </div> 
+                    </td>
+                    <td>
                         <ul>
                             <li>Html</li>
                             <li>Javascript/Jquery</li>
                             <li>Css/Bootstrap</li>
                         </ul>
-                    </th>
+                    </td>
                 </tr>
             </tbody>
         </table>   
     </div>
-    <div class="p-3">
-        <table class="ms-5 table">
-            <thead class="col-6">
+    <div class="p3">
+        <table class="container-md table rounded">
+            <thead>
                 <tr>
                     <th class="fyellow">
-                        <h1>Experience</h1>
+                        <h1 id="exp">Experience</h1>
                     </th>
-                    <th></th>
+                    <th class="text-white"></th>
                 </tr>
             </thead>
             <tbody>
-                <tr class="text-white">
-                    <th class="fs-5 col-6">Full Stack Developer</th>
-                    <th class="col-6 d-flex">
-                        <p>As a full-stack developer, I excel in both back-end and front-end responsibilities. 
+                <tr class="col-12 text-white">              
+                    <td class="fs-5 align-middle col-6">Full Stack Developer</td>     
+                    <td class="col-6">
+                        <p class="p-3">As a full-stack developer, I excel in both back-end and front-end responsibilities. 
                         I specialize in translating Figma designs into responsive and dynamic web front-ends. 
                         My role involves fixing existing bugs and implementing new features. 
                         I ensure seamless updates to the server through the command-line interface (CLI), 
                         guaranteeing a smooth transition to the live environment.</p>
-                    </th>
+                        <p class="p-3">
+                            For the primary project, I leverage CodeIgniter, utilizing various APIs and libraries to enhance functionality. 
+                            The range of APIs and libraries used is extensive, contributing to the project's robustness.
+                        </p>
+                        <p class="p-3">
+                            In addition to CodeIgniter, I undertake side projects involving WordPress development. In one instance, 
+                            I developed the entire backend system, integrating DocuSign API, WordPress REST API, and Twilio for texting 
+                            functionalities. Another noteworthy project involves creating a promotional feature for a WooCommerce website, 
+                            allowing users to receive a free product with their initial purchase. 
+                            Some projects include transforming Figma designs to home pages into fully functional systems.
+                        </p>
+                        <ul class="ms-5">
+                            <li>Worked effectively with minimal supervision.</li>
+                            <li>Implementing new design from figma to application.</li>
+                            <li>Implemented new features based on client needs.</li>
+                            <li>Fixed existing bug and improved it.</li>
+                            <li>Optimized application performance through SQL query enhancements.</li>
+                            <li>Deployed the application on a Linux server.</li>
+                            <li>Transformed Figma-designed concepts into a functional homepage.</li>
+                        </ul>
+                        <p class="p-3">Skills: PHP, MySQL, CodeIgniter, ChartJs, GoogleMap API, Twilio API, Docusign API, BOOTSTRAP, 
+                            Tailwind, Wordpress Plugin backend Developer.</p>
+                    </td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <div>
+        <h1 class="fyellow">Skills</h1>
+        <ul class="fs-5 ms-5 text-white">
+            <li class="p-3">Hard working</li>
+            <li class="p-3">Fast learner</li>
+            <li class="p-3">Work under pressure</li>
+            <li class="p-3">Great communication</li>
+            <li class="p-3">Eager to learn</li>
+            <li class="p-3">Open to new idea and technology</li>
+            <li class="p-3">Attention to Details</li>
+            <li class="p-3">Team Player</li>
+        </ul>
+    </div>
+    <div>
+        <h1 class="fyellow">Programming Languages</h1>
+        <h2 class="text-white">Front-End</h2>
+        <div class="mb-5 p-3">
+            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4 bi bi-person">
+                <img src="/logo/html.svg" alt=""><br>HTML</button>
+            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
+                <img src="/logo/logo.svg" alt=""><br>Javascript</button>
+            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
+                <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
+            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
+                <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
+        </div>
+    </div>
 </div>
-<div class="container">
 </div>
 </body>
 </html>
