--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 <div class="container-fluid">
      <div class="bar rounded" style="margin-bottom: 80px">
         <div class="ms-3">
-            <nav class="fw-bold navbar navbar-dark navbar-expand-md">
+            <nav id="navbar" class="fw-bold navbar navbar-dark navbar-expand-md">
                 <a class="navbar-brand" href="#">
                     <img style="height: 50px;" src="/pngwing.com.png"></img>
                 </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                <div  class="p-3 collapse navbar-collapse" id="navbarNav">
+                <div  class="align-self-end justify-content-end p-3 collapse navbar-collapse" id="navbarNav">
                     <ul class=" navbar-nav ml-auto">
                         <li class="scalehover nav-item">
-                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#">Home</a>
+                            <a class="nav-link text-white text-decoration-none" href="#">Home</a>
                         </li>
                         <li class="scalehover nav-item">
-                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#proj">Projects</a>
+                            <a class="nav-link text-white text-decoration-none" href="#proj">Projects</a>
                         </li>
                         <li class="scalehover nav-item">
-                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#exp">Experiences</a>
+                            <a class="nav-link text-white text-decoration-none" href="#exp">Experiences</a>
                         </li>
                         <li class="scalehover nav-item">
-                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#skills">Skills</a>
+                            <a class="nav-link text-white text-decoration-none" href="#skills">Skills</a>
                         </li>
                         <li class="scalehover nav-item">
-                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#progs">Programming Languages</a>
+                            <a class="nav-link text-white text-decoration-none" href="#progs">Programming Languages</a>
                         </li>                
                     </ul>
                 </div>
@@ -49,8 +49,8 @@
     </div>
     <div class="mb-5 container-fluid row text-white">
         <div class="col- col-md-8">
-            <h1 >Danielle Lorraine D. Getil</h1>
-            <h4 style="font-style: italic" class="fyellow">Professional Web Developer XD</h4>
+            <h1>Danielle Lorraine D. Getil</h1>
+            <h4 style="font-style: italic" class="fyellow">Front-End Web Developer</h4>
             <div class="col- col-sm-3 ">
                 <button id="utube" class="scalehover" style="border-radius: 15px; background-color: transparent;">
                     <img src="/Youtube_logo.png" alt="Youtube" style="height: 25px;">
@@ -63,36 +63,35 @@
                 
                 Web Developer from Philippines
                 with rich experience in web development
-                and building website from scratch  
+                and building website from scratch.  
                 
             </h5>
         </div>
         <div class="col-2 col-sm-4">
-            <img src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid animated-image rounded-circle">
+            <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid animated-image rounded-circle">
         </div>
     </div>
     <div>
         <div>
-            <h1 class="mb-3 col-4 fyellow">Introduction</h1>
+            <h1 class="mb-3 fa col-4 fyellow">Introduction</h1>
         </div>
         <div>
             <h5 class="text-white">
                 <p>
-                        I am a Full Stack Web Developer proficient specially in PHP, HTML, CSS, Bootstrap, MySQL, Laravel 
-                and limited experience on TailWind, Vuejs, Reactjs, Nodejs. From crafting stunning web designs to building
-                powerful server-side scripts, I deliver end-to-end solutions that meet diverse needs.
+                    Hi, I'm a front-end developer skilled in HTML, CSS, JavaScript, and Bootstrap. With a passion for creating seamless user experiences, I specialize in transforming designs into responsive and visually appealing websites. Let's collaborate and bring your ideas to life!
                 </p>
             </h5>
         </div>
     </div>
 
     <div>
-    <div class=" col-12 rounded">
+    <div class="bg-dark col-12 rounded">
+        <section >
         <table class="container-md table rounded">
             <thead>
                 <tr>
                     <th class="fyellow col-6">
-                        <h1 id="proj">Projects</h1>
+                        <h1 id="proj" class="fa font-fluid" >Projects</h1>
                     </th>
                     <th class="text-white fs-4">Technology Used</th>
                 </tr>
@@ -112,92 +111,88 @@
                     </td>
                 </tr>
             </tbody>
-        </table>   
+        </table>  
+        </section> 
     </div>
-    <div class="p3">
+    <div class="rounded bg-dark p3">
+        <section >
         <table class="container-md table rounded">
             <thead>
                 <tr>
                     <th class="fyellow">
-                        <h1 id="exp">Experience</h1>
+                        <h1 id="exp" class="fa font-fluid" >Experience</h1>
                     </th>
                     <th class="text-white"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr class="col-12 text-white">              
-                    <td class="fw-bold fs-4 align-middle col-6">Full Stack Developer</td>     
+                    <td class="fw-bold fs-4 align-middle col-6">Front-End Developer</td>     
                     <td class="col-6">
-                        <p class="p-3">As a full-stack developer, I excel in both back-end and front-end responsibilities. 
-                        I specialize in translating Figma designs into responsive and dynamic web front-ends. 
-                        My role involves fixing existing bugs and implementing new features. 
-                        I ensure seamless updates to the server through the command-line interface (CLI), 
-                        guaranteeing a smooth transition to the live environment.</p>
+                        <p class="p-3">As a front-end developer, I specialize in crafting elegant and user-friendly websites using HTML, JavaScript, CSS, and Bootstrap. With a solid understanding of these foundational technologies, I create clean and responsive designs that prioritize usability and accessibility. Through my expertise in Bootstrap, I streamline development processes and ensure consistent and visually appealing layouts across different devices. Passionate about creating intuitive user interfaces, I continuously expand my skills and stay updated with industry best practices to deliver high-quality solutions that meet client needs and exceed user expectations.</p>
                         <p class="p-3">
-                            For the primary project, I leverage CodeIgniter, utilizing various APIs and libraries to enhance functionality. 
-                            The range of APIs and libraries used is extensive, contributing to the project's robustness.
-                        </p>
-                        <p class="p-3">
-                            In addition to CodeIgniter, I undertake side projects involving WordPress development. In one instance, 
-                            I developed the entire backend system, integrating DocuSign API, WordPress REST API, and Twilio for texting 
-                            functionalities. Another noteworthy project involves creating a promotional feature for a WooCommerce website, 
-                            allowing users to receive a free product with their initial purchase. 
-                            Some projects include transforming Figma designs to home pages into fully functional systems.
+                            Embarking on the journey of building my own portfolio website was both a challenge and a rewarding experience. Armed with my expertise in HTML, CSS, JavaScript, and Bootstrap, I meticulously designed and developed a digital space that not only showcases my skills but also reflects my passion for front-end development. Throughout the process, I encountered obstacles that tested my problem-solving abilities and pushed me to explore innovative solutions. Additionally, my freelance projects allowed me to apply my skills in real-world scenarios, collaborating with clients to redesign their websites and create captivating user experiences. As an intern, I immersed myself in the fast-paced environment of a web development agency, gaining valuable insights and honing my skills alongside experienced professionals. Completing online courses and participating in hackathons further enriched my learning journey, providing opportunities to expand my knowledge and push the boundaries of what I thought possible. Each experience has contributed to my growth as a front-end developer, shaping me into the skilled and adaptable professional I am today.
                         </p>
                         <ul class="ms-5">
-                            <li>Worked effectively with minimal supervision.</li>
-                            <li>Implementing new design from figma to application.</li>
-                            <li>Implemented new features based on client needs.</li>
-                            <li>Fixed existing bug and improved it.</li>
-                            <li>Optimized application performance through SQL query enhancements.</li>
-                            <li>Deployed the application on a Linux server.</li>
-                            <li>Transformed Figma-designed concepts into a functional homepage.</li>
+                            <li>Developed a responsive portfolio website using HTML, CSS, JavaScript, and Bootstrap.</li>
+                            <li>Designed and implemented a clean and modern user interface to showcase projects and skills.</li>
+                            <li>Integrated animations and interactive elements to enhance user engagement.</li>
+                            <li>Optimized website performance for fast loading times and cross-browser compatibility.</li>
+                            <li>Continuously updated and improved the website based on feedback and evolving design trends.</li>
+                            <li>Implemented the design using HTML, CSS, JavaScript, and Bootstrap, ensuring responsiveness across devices.</li>
+                            <li>Integrated custom features and functionality, such as contact forms and image galleries, to meet the client's requirements.</li>
+                            <li>Provided ongoing support and maintenance to address any issues and make updates as needed.</li>
                         </ul>
-                        <p class="p-3">Skills: PHP, MySQL, CodeIgniter, ChartJs, GoogleMap API, Twilio API, Docusign API, BOOTSTRAP, 
-                            Tailwind, Wordpress Plugin backend Developer.</p>
+                        <p class="p-3">Skills: HTML, JavaScript, CSS and BOOTSTRAP. 
+                            </p>
                     </td>
                 </tr>
             </tbody>
         </table>
+    </section>
     </div>
+    <div class="md-5">
+        <section >        
+            <h1 id="skills" class="fa font-fluid fyellow">Skills</h1><br><br>
+            <ul class="fs-3 font-fluid fw-bold ms-5 text-white">
+                <li class="mb-3">Hard working</li>
+                <li class="mb-3">Fast learner</li>
+                <li class="mb-3">Work under pressure</li>
+                <li class="mb-3">Great communication</li>
+                <li class="mb-3">Eager to learn</li>
+                <li class="mb-3">Open to new idea and technology</li>
+                <li class="mb-3">Attention to Details</li>
+                <li class="mb-3">Team Player</li>
+            </ul>
+        </section>
+    </div><br><br>
     <div>
-        <h1 id="skills" class="font-fluid fyellow">Skills</h1>
-        <ul class="font-fluid fw-bold ms-5 text-white">
-            <li class="fs-13 mb-3">Hard working</li>
-            <li class="fs-13 mb-3">Fast learner</li>
-            <li class="fs-13 mb-3">Work under pressure</li>
-            <li class="fs-13 mb-3">Great communication</li>
-            <li class="fs-13 mb-3">Eager to learn</li>
-            <li class="fs-13 mb-3">Open to new idea and technology</li>
-            <li class="fs-13 mb-3">Attention to Details</li>
-            <li class="fs-13 mb-3">Team Player</li>
-        </ul>
-    </div>
-    <div>
-        <h1 id="progs" class="fyellow">Programming Languages</h1>
-        <h2 class="text-white">Front-End</h2>
-        <div class="col-12 d-flex border-primary">
-            <div class="col-3">
-                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
-                    <img src="/logo/html.svg" alt=""><br>HTML</button>
+        <section >  
+            <h1 id="progs" class="fa font-fluid fyellow">Programming Languages</h1>
+            <h2 class="text-white">Front-End</h2><br>
+            <div class="mb-5 col-12 d-flex border-primary">
+                <div class="col-3">
+                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                        <img src="/logo/html.svg" alt=""><br>HTML</button>
+                </div>
+                <div class="col-3">
+                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                        <img src="/logo/logo.svg" alt=""><br>Javascript</button>
+                </div>
+                <div class="col-3">
+                    <button id="but" class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                        <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
+                </div>
+                <div class="col-3">
+                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                        <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
+                </div>
             </div>
-            <div class="col-3">
-                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
-                    <img src="/logo/logo.svg" alt=""><br>Javascript</button>
-            </div>
-            <div class="col-3">
-                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
-                    <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
-            </div>
-            <div class="col-3">
-                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
-                    <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
-            </div>
-        </div>
+        </section>
     </div>
     </div>
     <div class="containter p-3">
-        <div class="d-flex align-items-center justify-content-center">
+        <div class="bg-dark rounded d-flex align-items-center justify-content-center">
             <a href="https://www.facebook.com/ninz.getz.9" target="_blank">
                 <img src="/logo/facebook.svg" alt="Facebook">
             </a>
