--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </div>
 
     <div>
-    <div class="bg-dark col-12 rounded">
+    <div class="col-12 rounded">
         <section >
-        <table class="container-md table rounded">
+        <table class="bg-dark container-md table rounded">
             <thead>
                 <tr>
                     <th class="fyellow col-6">
@@ -114,9 +114,9 @@
         </table>  
         </section> 
     </div>
-    <div class="rounded bg-dark p3">
+    <div class="rounded p3">
         <section >
-        <table class="container-md table rounded">
+        <table class="bg-dark container-md table rounded">
             <thead>
                 <tr>
                     <th class="fyellow">
@@ -129,8 +129,8 @@
                 <tr class="col-12 text-white">              
                     <td class="fw-bold fs-4 align-middle col-6">Front-End Developer</td>     
                     <td class="col-6">
-                        <p class="p-3">As a front-end developer, I specialize in crafting elegant and user-friendly websites using HTML, JavaScript, CSS, and Bootstrap. With a solid understanding of these foundational technologies, I create clean and responsive designs that prioritize usability and accessibility. Through my expertise in Bootstrap, I streamline development processes and ensure consistent and visually appealing layouts across different devices. Passionate about creating intuitive user interfaces, I continuously expand my skills and stay updated with industry best practices to deliver high-quality solutions that meet client needs and exceed user expectations.</p>
-                        <p class="p-3">
+                        <p>As a front-end developer, I specialize in crafting elegant and user-friendly websites using HTML, JavaScript, CSS, and Bootstrap. With a solid understanding of these foundational technologies, I create clean and responsive designs that prioritize usability and accessibility. Through my expertise in Bootstrap, I streamline development processes and ensure consistent and visually appealing layouts across different devices. Passionate about creating intuitive user interfaces, I continuously expand my skills and stay updated with industry best practices to deliver high-quality solutions that meet client needs and exceed user expectations.</p>
+                        <p>
                             Embarking on the journey of building my own portfolio website was both a challenge and a rewarding experience. Armed with my expertise in HTML, CSS, JavaScript, and Bootstrap, I meticulously designed and developed a digital space that not only showcases my skills but also reflects my passion for front-end development. Throughout the process, I encountered obstacles that tested my problem-solving abilities and pushed me to explore innovative solutions. Additionally, my freelance projects allowed me to apply my skills in real-world scenarios, collaborating with clients to redesign their websites and create captivating user experiences. As an intern, I immersed myself in the fast-paced environment of a web development agency, gaining valuable insights and honing my skills alongside experienced professionals. Completing online courses and participating in hackathons further enriched my learning journey, providing opportunities to expand my knowledge and push the boundaries of what I thought possible. Each experience has contributed to my growth as a front-end developer, shaping me into the skilled and adaptable professional I am today.
                         </p>
                         <ul class="ms-5">
@@ -143,7 +143,7 @@
                             <li>Integrated custom features and functionality, such as contact forms and image galleries, to meet the client's requirements.</li>
                             <li>Provided ongoing support and maintenance to address any issues and make updates as needed.</li>
                         </ul>
-                        <p class="p-3">Skills: HTML, JavaScript, CSS and BOOTSTRAP. 
+                        <p>Skills: HTML, JavaScript, CSS and BOOTSTRAP. 
                             </p>
                     </td>
                 </tr>
