--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="icon/x-icon" href="/pngwing.com.png">
@@ -14,38 +16,42 @@
 <body class="back container-xl ">
     <script src="script.js"></script>
 <div class="container-fluid">
-     <div class="bar row rounded" style="margin-bottom: 80px">
-        <div class="col-7">
-            <img style="height: 50px;" src="/pngwing.com.png">
-        </div>
-        <div class="col-5 mb-">
-            <nav class="fw-bold navbar navbar-expand-lg">
-                <ul class="navbar-nav">
-                    <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="">Home</a>
-                    </li>
-                    <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="#proj">Projects</a>
-                    </li>
-                    <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="#exp">Experiences</a>
-                    </li>
-                    <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="">Skills</a>
-                    </li>
-                    <li class="nav-link">
-                        <a class="text-white text-decoration-none" href="">Programming Languages</a>
-                    </li>
-                    
-                </ul>
+     <div class="bar rounded" style="margin-bottom: 80px">
+        <div class="ms-3">
+            <nav class="fw-bold navbar navbar-dark navbar-expand-md">
+                <a class="navbar-brand" href="#">
+                    <img style="height: 50px;" src="/pngwing.com.png"></img>
+                </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div  class="p-3 collapse navbar-collapse" id="navbarNav">
+                    <ul class=" navbar-nav ml-auto">
+                        <li class="scalehover nav-item">
+                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#">Home</a>
+                        </li>
+                        <li class="scalehover nav-item">
+                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#proj">Projects</a>
+                        </li>
+                        <li class="scalehover nav-item">
+                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#exp">Experiences</a>
+                        </li>
+                        <li class="scalehover nav-item">
+                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#skills">Skills</a>
+                        </li>
+                        <li class="scalehover nav-item">
+                            <a class="nav-link text-white text-decoration-none" onclick="highlight(this)" href="#progs">Programming Languages</a>
+                        </li>                
+                    </ul>
+                </div>
             </nav>
         </div>
     </div>
-    <div class="mb-5 container-fluid row col-2 col-12 text-white">
-        <div class="col-6">
-            <h1>Danielle Lorraine D. Getil</h1>
+    <div class="mb-5 container-fluid row text-white">
+        <div class="col- col-md-8">
+            <h1 >Danielle Lorraine D. Getil</h1>
             <h4 style="font-style: italic" class="fyellow">Professional Web Developer XD</h4>
-            <div class="col-3">
+            <div class="col- col-sm-3 ">
                 <button id="utube" class="scalehover" style="border-radius: 15px; background-color: transparent;">
                     <img src="/Youtube_logo.png" alt="Youtube" style="height: 25px;">
                 </button>
@@ -61,9 +67,8 @@
                 
             </h5>
         </div>
-        <div class="col-2"></div>
-        <div class="col-4">
-            <img src="/431019694_3819668394920656_1421125926404645861_n.png" class="animated-image rounded-circle">
+        <div class="col-2 col-sm-4">
+            <img src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid animated-image rounded-circle">
         </div>
     </div>
     <div>
@@ -81,7 +86,7 @@
         </div>
     </div>
 
-<div>
+    <div>
     <div class=" col-12 rounded">
         <table class="container-md table rounded">
             <thead>
@@ -94,7 +99,7 @@
             </thead>
             <tbody>
                 <tr class="text-white">
-                    <td class="fs-5">Grade Calculator <div>              
+                    <td class="fs-5 align-middle">Grade Calculator <div>              
                         <button id="me" class="btn btn-warning fs-6 fw-bold scalehover">Click Me</button>
                     </div> 
                     </td>
@@ -121,7 +126,7 @@
             </thead>
             <tbody>
                 <tr class="col-12 text-white">              
-                    <td class="fs-5 align-middle col-6">Full Stack Developer</td>     
+                    <td class="fw-bold fs-4 align-middle col-6">Full Stack Developer</td>     
                     <td class="col-6">
                         <p class="p-3">As a full-stack developer, I excel in both back-end and front-end responsibilities. 
                         I specialize in translating Figma designs into responsive and dynamic web front-ends. 
@@ -156,33 +161,51 @@
         </table>
     </div>
     <div>
-        <h1 class="fyellow">Skills</h1>
-        <ul class="fs-5 ms-5 text-white">
-            <li class="p-3">Hard working</li>
-            <li class="p-3">Fast learner</li>
-            <li class="p-3">Work under pressure</li>
-            <li class="p-3">Great communication</li>
-            <li class="p-3">Eager to learn</li>
-            <li class="p-3">Open to new idea and technology</li>
-            <li class="p-3">Attention to Details</li>
-            <li class="p-3">Team Player</li>
+        <h1 id="skills" class="font-fluid fyellow">Skills</h1>
+        <ul class="font-fluid fw-bold ms-5 text-white">
+            <li class="fs-13 mb-3">Hard working</li>
+            <li class="fs-13 mb-3">Fast learner</li>
+            <li class="fs-13 mb-3">Work under pressure</li>
+            <li class="fs-13 mb-3">Great communication</li>
+            <li class="fs-13 mb-3">Eager to learn</li>
+            <li class="fs-13 mb-3">Open to new idea and technology</li>
+            <li class="fs-13 mb-3">Attention to Details</li>
+            <li class="fs-13 mb-3">Team Player</li>
         </ul>
     </div>
     <div>
-        <h1 class="fyellow">Programming Languages</h1>
+        <h1 id="progs" class="fyellow">Programming Languages</h1>
         <h2 class="text-white">Front-End</h2>
-        <div class="mb-5 p-3">
-            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4 bi bi-person">
-                <img src="/logo/html.svg" alt=""><br>HTML</button>
-            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
-                <img src="/logo/logo.svg" alt=""><br>Javascript</button>
-            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
-                <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
-            <button class="but col-2 ms-4 p-3 scalehover rounded btn btn-dark text-white fw-bold fs-4">
-                <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
+        <div class="col-12 d-flex border-primary">
+            <div class="col-3">
+                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <img src="/logo/html.svg" alt=""><br>HTML</button>
+            </div>
+            <div class="col-3">
+                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <img src="/logo/logo.svg" alt=""><br>Javascript</button>
+            </div>
+            <div class="col-3">
+                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
+            </div>
+            <div class="col-3">
+                <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
+            </div>
         </div>
     </div>
-</div>
+    </div>
+    <div class="containter p-3">
+        <div class="d-flex align-items-center justify-content-center">
+            <a href="https://www.facebook.com/ninz.getz.9" target="_blank">
+                <img src="/logo/facebook.svg" alt="Facebook">
+            </a>
+            <a target="_blank" href="https://github.com/ninz0018">
+                <img src="/logo/github.svg" alt="Github">
+            </a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
