--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </nav>
         </div>
     </div>
-    <div class="fade-element container p-3">
+    <div class=" container p-3">
     <div class="mb-5 container-fluid row text-white">
         <div style="z-index: 888;" class="col- col-md-8">
             <h1>Danielle Lorraine D. Getil</h1>
