--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                     </button>
                 <div  class="align-self-end justify-content-end p-3 collapse navbar-collapse" id="navbarNav">
                     <ul class=" navbar-nav ml-auto">
-                        <li class="scalehover nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white text-decoration-none" href="#">Home</a>
                         </li>
-                        <li class="scalehover nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white text-decoration-none" href="#proj">Projects</a>
                         </li>
-                        <li class="scalehover nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white text-decoration-none" href="#exp">Experiences</a>
                         </li>
-                        <li class="scalehover nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white text-decoration-none" href="#skills">Skills</a>
                         </li>
-                        <li class="scalehover nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-white text-decoration-none" href="#progs">Programming Languages</a>
                         </li>                
                     </ul>
