--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <div  class="align-self-end justify-content-end p-3 collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link text-white text-decoration-none" href="#">Home</a>
+                            <a class="fa nav-link text-white text-decoration-none" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white text-decoration-none" href="#proj">Projects</a>
+                            <a class="fa nav-link text-white text-decoration-none" href="#proj">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white text-decoration-none" href="#exp">Experiences</a>
+                            <a class="fa nav-link text-white text-decoration-none" href="#exp">Experiences</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white text-decoration-none" href="#skills">Skills</a>
+                            <a class="fa nav-link text-white text-decoration-none" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white text-decoration-none" href="#progs">Programming Languages</a>
+                            <a class="fa nav-link text-white text-decoration-none" href="#progs">Programming Languages</a>
                         </li>                
                     </ul>
                 </div>
