--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 
             </h5>
         </div>
-        <div class="col-2 col-sm-4">
-            <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid animated-image rounded-circle">
+        <div class="col-2 col-sm-4  animated-image rounded-circle">
+            <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid shad rounded-circle">
         </div>
     </div>
     <div>
