--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="mb-5 container-fluid row text-white">
-        <div class="col- col-md-8">
+        <div style="z-index: 888;" class="col- col-md-8">
             <h1>Danielle Lorraine D. Getil</h1>
             <h4 style="font-style: italic" class="fyellow">Front-End Web Developer</h4>
             <div class="col- col-sm-3 ">
@@ -67,7 +67,7 @@
                 
             </h5>
         </div>
-        <div class="col-2 col-sm-4  animated-image rounded-circle">
+        <div class="container col-2 col-sm-4  animated-image rounded-circle">
             <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid shad rounded-circle">
         </div>
     </div>
