--- a/index.html
+++ b/index.html
@@ -171,21 +171,25 @@
             <h1 id="progs" class="fa font-fluid fyellow">Programming Languages</h1>
             <h2 class="text-white">Front-End</h2><br>
             <div class="mb-5 col-12 d-flex border-primary">
-                <div class="col-3">
+                <div class="col-2">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/html.svg" alt=""><br>HTML</button>
                 </div>
-                <div class="col-3">
+                <div class="col-2">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/logo.svg" alt=""><br>Javascript</button>
                 </div>
-                <div class="col-3">
+                <div class="col-2">
                     <button id="but" class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
                 </div>
-                <div class="col-3">
+                <div class="col-2">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
+                </div>
+                <div class="col-2">
+                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                        <img src="/logo/css.svg" alt="CSS"><br>CSS</button>
                 </div>
             </div>
         </section>
