--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="icon/x-icon" href="/pngwing.com.png">
 </head>
-<body class="back container-xl ">
+<body class="back ">
     <script src="script.js"></script>
-<div class="container-fluid">
+<div class="">
      <div class="bar rounded" style="margin-bottom: 80px">
         <div class="ms-3">
             <nav id="navbar" class="fw-bold navbar navbar-dark navbar-expand-md">
@@ -47,6 +47,7 @@
             </nav>
         </div>
     </div>
+    <div class="container p-3">
     <div class="mb-5 container-fluid row text-white">
         <div style="z-index: 888;" class="col- col-md-8">
             <h1>Danielle Lorraine D. Getil</h1>
@@ -205,6 +206,7 @@
             </a>
         </div>
     </div>
+</div>   
 </div>
 </body>
 </html>
