--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
         <section >  
             <h1 id="progs" class="fa font-fluid fyellow">Programming Languages</h1>
             <h2 class="text-white">Front-End</h2><br>
-            <div class="mb-5 col-12 d-flex border-primary">
-                <div class="col-2">
+            <div class="mb-5 row border-primary">
+                <div class="col">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/html.svg" alt=""><br>HTML</button>
                 </div>
-                <div class="col-2">
+                <div class="col">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/logo.svg" alt=""><br>Javascript</button>
                 </div>
-                <div class="col-2">
+                <div class="col">
                     <button id="but" class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
                 </div>
-                <div class="col-2">
+                <div class="col">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
                 </div>
-                <div class="col-2">
+                <div class="col">
                     <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/css.svg" alt="CSS"><br>CSS</button>
                 </div>
@@ -196,17 +196,17 @@
         </section>
     </div>
     </div>
-    <div class="containter p-3">
-        <div class="bg-dark rounded d-flex align-items-center justify-content-center">
-            <a href="https://www.facebook.com/ninz.getz.9" target="_blank">
-                <img src="/logo/facebook.svg" alt="Facebook">
-            </a>
-            <a target="_blank" href="https://github.com/ninz0018">
-                <img src="/logo/github.svg" alt="Github">
-            </a>
-        </div>
-    </div>
 </div>   
+<div>
+    <div class="bg-dark rounded d-flex align-items-center justify-content-center">
+        <a href="https://www.facebook.com/ninz.getz.9" target="_blank">
+            <img src="/logo/facebook.svg" alt="Facebook">
+        </a>
+        <a target="_blank" href="https://github.com/ninz0018">
+            <img src="/logo/github.svg" alt="Github">
+        </a>
+    </div>
+</div>
 </div>
 </body>
 </html>
