--- a/index.html
+++ b/index.html
@@ -173,23 +173,23 @@
             <h2 class="text-white">Front-End</h2><br>
             <div class="mb-5 row border-primary">
                 <div class="col">
-                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <button class="mb-3 col-12 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/html.svg" alt=""><br>HTML</button>
                 </div>
                 <div class="col">
-                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <button class="col-12 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/logo.svg" alt=""><br>Javascript</button>
                 </div>
                 <div class="col">
-                    <button id="but" class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <button id="but" class="col-12 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/bootstrap.svg" alt="Bootstrap"><br>Bootstrap</button>
                 </div>
                 <div class="col">
-                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <button class="col-12 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/jquery.svg" alt="Bootstrap"><br>Jquery</button>
                 </div>
                 <div class="col">
-                    <button class="col-11 but fa-brand scalehover rounder btn btn-dark">
+                    <button class="col-12 but fa-brand scalehover rounder btn btn-dark">
                         <img src="/logo/css.svg" alt="CSS"><br>CSS</button>
                 </div>
             </div>
