--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="back ">
     <script src="script.js"></script>
-<div class="">
+<div>
      <div class="bar rounded" style="margin-bottom: 80px">
         <div class="ms-3">
             <nav id="navbar" class="fw-bold navbar navbar-dark navbar-expand-md">
@@ -47,7 +47,7 @@
             </nav>
         </div>
     </div>
-    <div class="container p-3">
+    <div class="fade-element container p-3">
     <div class="mb-5 container-fluid row text-white">
         <div style="z-index: 888;" class="col- col-md-8">
             <h1>Danielle Lorraine D. Getil</h1>
@@ -68,8 +68,8 @@
                 
             </h5>
         </div>
-        <div class="container col-2 col-sm-4  animated-image rounded-circle">
-            <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="img-fluid shad rounded-circle">
+        <div style="overflow: hidden; width: 20%;" class="d-flex container col-2 col-sm-4  animated-image rounded-circle">
+            <img id="prof" src="/431019694_3819668394920656_1421125926404645861_n.png" class="h-auto img-fluid shad">
         </div>
     </div>
     <div>
